--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,22 @@
-add_executable(opengl-test main.cc)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+find_package(Vulkan REQUIRED)
+find_package(OpenGL REQUIRED)
+find_package(glfw3 REQUIRED)
+find_package(spdlog REQUIRED)
+
+add_executable(graphics-test main.cc)
+
+target_link_libraries(graphics-test
+  OpenGL::GL
+  Vulkan::Vulkan
+  glfw
+  glad
+  spdlog::spdlog
+  )
+
+target_include_directories(graphics-test
+  SYSTEM
+  PRIVATE
+  ${RXCPP_INCLUDE_PATH}
+  )
