--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(graphics-test LANGUAGES CXX C)
+project(my-graphics LANGUAGES CXX C)
 
 set(VENDOR_SOURCE_DIR ${PROJECT_SOURCE_DIR}/vendor)
 set(VENDOR_BINARY_DIR ${PROJECT_BINARY_DIR}/vendor)
