--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,14 @@
-enable_testing()
+# enable_testing()
 
-find_package(GTest REQUIRED)
-find_package(glm REQUIRED)
+# find_package(GTest REQUIRED)
+# find_package(glm REQUIRED)
 
-add_executable(my-graphics-test
-  test.cc
-  )
+# add_executable(my-graphics-test
+#   test.cc
+#   )
 
-target_link_libraries(my-graphics-test
-  glm
-  GTest::gtest
-  GTest::gtest_main
-  )
+# target_link_libraries(my-graphics-test
+#   glm
+#   GTest::gtest
+#   GTest::gtest_main
+#   )
