--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,15 @@ project(my-graphics LANGUAGES CXX C)
 set(VENDOR_SOURCE_DIR ${PROJECT_SOURCE_DIR}/vendor)
 set(VENDOR_BINARY_DIR ${PROJECT_BINARY_DIR}/vendor)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+list(APPEND CMAKE_MODULE_PATH
+  ${PROJECT_SOURCE_DIR}/cmake)
+
 add_subdirectory(vendor)
 add_subdirectory(src)
 add_subdirectory(test)
